# godot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SConstruct  generate.py  godot.desktop  make-desktop.sh  version.py
core/: CMakeLists.txt  bitfield_enum.h  engine.cpp  engine.h  generate.py  object.cpp  object.h  profiler.cpp  profiler.h  ring_buffer.h  safe_refcount.cpp  script_language.cpp  script_language.h  typedefs.h  variant_parser.cpp
core/bind/: CMakeLists.txt  core_bind.cpp  core_bind.h
core/crypto/: CMakeLists.txt
core/io/: CMakeLists.txt
core/math/: bvh.h  transform_interpolator.h
core/os/: input.cpp  input.h  midi_driver.cpp  mutex.h  os.cpp
doc/classes/: @GlobalScope.xml  Area.xml  Basis.xml  EditorSettings.xml  Environment.xml  GIProbe.xml  GeometryInstance.xml  Light.xml  Mesh.xml  MeshLibrary.xml  NavigationMesh.xml  ProjectSettings.xml  ReflectionProbe.xml  RigidBody.xml  ShaderMaterial.xml  Sky.xml  SpatialMaterial.xml  VehicleWheel.xml  VideoPlayer.xml  VisualServer.xml
doc/translations/: ar.po
drivers/: CMakeLists.txt  SCsub
drivers/alsa/: CMakeLists.txt
drivers/coreaudio/: CMakeLists.txt
drivers/dummy/: rasterizer_dummy.h
drivers/gl_context/: CMakeLists.txt
drivers/gles2/: rasterizer_scene_gles2.cpp  rasterizer_scene_gles2.h  rasterizer_storage_gles2.cpp  rasterizer_storage_gles2.h
drivers/gles2/shaders/: scene.glsl
drivers/gles3/: CMakeLists.txt  generate_shaders.py  rasterizer_canvas_gles3.cpp  rasterizer_canvas_gles3.h  rasterizer_gles3.cpp  rasterizer_gles3.h  rasterizer_scene_gles3.cpp  rasterizer_scene_gles3.h  rasterizer_storage_gles3.cpp  rasterizer_storage_gles3.h  shader_compiler_gles3.cpp  shader_gles3.cpp
drivers/gles3/shaders/: scene.glsl
drivers/gles_common/: rasterizer_array.h  rasterizer_instance_base.h
drivers/png/: CMakeLists.txt
drivers/pulseaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt
drivers/wasapi/: CMakeLists.txt
drivers/windows/: CMakeLists.txt
drivers/xaudio2/: CMakeLists.txt
editor/: CMakeLists.txt  connections_dialog.cpp  create_dialog.cpp  editor_data.cpp  editor_data.h  editor_export.cpp  editor_file_system.cpp  editor_file_system.h  editor_inspector.cpp  editor_node.cpp  editor_properties.cpp  editor_properties.h  editor_property_name_processor.cpp  editor_settings.cpp  generate_editor.py  project_manager.cpp  scene_tree_dock.cpp  scene_tree_dock.h  scene_tree_editor.cpp  spatial_editor_gizmos.cpp  spatial_editor_gizmos.h
editor/doc/: doc_data.cpp
editor/import/: resource_importer_scene.cpp  resource_importer_scene.h  resource_importer_texture.cpp
editor/plugins/: CMakeLists.txt  particles_2d_editor_plugin.cpp  particles_editor_plugin.cpp  particles_editor_plugin.h  spatial_editor_plugin.cpp  spatial_editor_plugin.h  visual_shader_editor_plugin.cpp
main/: CMakeLists.txt  SCsub  main.cpp  main_builders.py  main_timer_sync.cpp  main_timer_sync.h
main/tests/: CMakeLists.txt
modules/: CMakeLists.txt  generate_modules.py
modules/bullet/: CMakeLists.txt  bullet_physics_server.cpp  bullet_physics_server.h  space_bullet.cpp  space_bullet.h
modules/cims_creator/: cims_creator.cpp  cims_creator.h  register_types.cpp  register_types.h
modules/cvtt/: CMakeLists.txt
modules/enet/: CMakeLists.txt
modules/etc/: CMakeLists.txt
modules/freetype/: CMakeLists.txt
modules/gdscript/: CMakeLists.txt  gdscript.cpp  gdscript.h  gdscript_function.cpp  gdscript_parser.cpp
modules/hdr/: CMakeLists.txt
modules/jpg/: CMakeLists.txt
modules/kitty_builder/: player.cpp  player.h  register_types.cpp  register_types.h
modules/mbedtls/: CMakeLists.txt
modules/mesh_compositor/: SCsub  mesh_compositor.cpp  mesh_compositor.h  register_types.cpp  register_types.h
modules/minimp3/: CMakeLists.txt
modules/mono/: csharp_script.cpp  csharp_script.h
modules/navigation/: CMakeLists.txt  SCsub
modules/np_multi_mesh/: CMakeLists.txt  SCsub  multi_mesh_system.cpp  multi_mesh_system.h  register_types.cpp  register_types.h
modules/ogg/: CMakeLists.txt
modules/opensimplex/: CMakeLists.txt
modules/opus/: CMakeLists.txt
modules/pvr/: CMakeLists.txt
modules/recast/: navigation_mesh_generator.cpp
modules/regex/: CMakeLists.txt
modules/squish/: CMakeLists.txt
modules/stb_vorbis/: CMakeLists.txt
modules/svg/: CMakeLists.txt
modules/tga/: CMakeLists.txt
modules/theora/: CMakeLists.txt
modules/tinyexr/: CMakeLists.txt
modules/upnp/: CMakeLists.txt
modules/vhacd/: CMakeLists.txt
modules/vorbis/: CMakeLists.txt
modules/webxr/: webxr_interface_js.cpp
platform/: CMakeLists.txt
platform/server/: os_server.cpp  os_server.h
platform/windows/: CMakeLists.txt  context_gl_windows.cpp  joypad_windows.cpp  joypad_windows.h  os_windows.cpp  os_windows.h  platform_config.h
platform/x11/: CMakeLists.txt  joypad_linux.cpp  joypad_linux.h  os_x11.cpp  os_x11.h  platform_config.h
scene/: CMakeLists.txt  register_scene_types.cpp  scene_string_names.h
scene/2d/: canvas_item.cpp  particles_2d.cpp
scene/3d/: baked_lightmap.cpp  collision_object.cpp  cull_instance.cpp  cull_instance.h  gi_probe.cpp  light.cpp  light.h  mesh_instance.cpp  occluder.cpp  particles.cpp  particles.h  path.cpp  path.h  physics_body.cpp  physics_body.h  ray_cast.cpp  reflection_probe.h  (+9 more)
servers/: CMakeLists.txt  SCsub  audio_server.h  physics_server.h  register_server_types.cpp  visual_server.cpp  visual_server.h
servers/audio/: CMakeLists.txt
servers/camera/: camera_feed.cpp
servers/physics/: physics_server_sw.cpp  physics_server_sw.h  shape_sw.cpp  space_sw.cpp
servers/physics_2d/: area_2d_sw.h
servers/rendering/renderer_rd/shaders/forward_clustered/: scene_forward_clustered.glsl
servers/visual/: CMakeLists.txt  data_particles.h  rasterizer.h  shader_language.cpp  shader_language.h  shader_types.cpp  visual_server_canvas.cpp  visual_server_raster.cpp  visual_server_raster.h  visual_server_scene.cpp  visual_server_scene.h  visual_server_viewport.cpp  visual_server_viewport.h  visual_server_wrap_mt.cpp  visual_server_wrap_mt.h
servers/visual/portals/: portal_renderer.h
(+40 files in other folders)
